--- a/datamine/lang/Chineses_xml.pak/text_ui_Loot.xml
+++ b/datamine/lang/Chineses_xml.pak/text_ui_Loot.xml
@@ -8,9 +8,9 @@
  <DocumentProperties xmlns="urn:schemas-microsoft-com:office:office">
   <Title>Untitled Spreadsheet</Title>
   <Author>Unknown Creator</Author>
-  <LastAuthor>Cthylla</LastAuthor>
-  <Created>2020-03-05T08:53:42Z</Created>
-  <LastSaved>2020-03-05T08:53:42Z</LastSaved>
+  <LastAuthor>Christopher</LastAuthor>
+  <Created>2020-03-17T16:49:05Z</Created>
+  <LastSaved>2020-03-17T16:49:05Z</LastSaved>
   <Company>Microsoft Corporation</Company>
   <Version>16.00</Version>
  </DocumentProperties>
@@ -18,10 +18,11 @@
   <AllowPNG/>
  </OfficeDocumentSettings>
  <ExcelWorkbook xmlns="urn:schemas-microsoft-com:office:excel">
-  <WindowHeight>17625</WindowHeight>
-  <WindowWidth>32767</WindowWidth>
+  <WindowHeight>7980</WindowHeight>
+  <WindowWidth>21570</WindowWidth>
   <WindowTopX>32767</WindowTopX>
   <WindowTopY>32767</WindowTopY>
+  <RefModeR1C1/>
   <ProtectStructure>False</ProtectStructure>
   <ProtectWindows>False</ProtectWindows>
  </ExcelWorkbook>
@@ -1107,7 +1108,7 @@
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s65"><Data ss:Type="String">ui_unique_flintlock_gun_lore</Data></Cell>
     <Cell ss:StyleID="s68"><Data ss:Type="String">&lt;Font Size=&quot;15&quot; Color=&quot;#ccb270&quot;&gt;&lt;i&gt;As it often does, the Sea of Torment summoned a flash storm, sending the Arman II ricocheting between the waves. Her crew sealed in the hold, sails down, one unlucky sailor was stranded in the crow’s nest, his trusty pistol his only company.\n\nA huge wave suddenly struck the ship, sending the gun flying. At the apex of its flight, it was struck by lightning, protecting the ship. It fell to the deck, slipping into the hull. On returning to port, the electrified pistol was insulated with diamonds and will forever channel the power of the sea.&lt;/i&gt;&lt;/font&gt;</Data></Cell>
-    <Cell ss:StyleID="s65"><Data ss:Type="String">&lt;Font Size=&quot;15&quot; Color=&quot;#ccb270&quot;&gt;&lt;i&gt;就像它经常做的那样，痛苦之海召唤了一场风暴，让阿曼二号在浪尖上跳跃。它的船员们把自己密封在船舱里，一个倒霉的水手为了下帆被滞留在桅杆上，他那把可靠的手枪是他唯一的同伴。\n\n一道巨浪突然袭击了船，枪脱手飞了出去。它在飞行的顶点，被闪电击中，保护了整艘船。它掉到甲板上，滑进了船体。回到港口后，通电的手枪被用钻石绝缘，它将永远传递海洋的力量。&lt;/i&gt;&lt;/Font&gt;</Data></Cell>
+    <Cell ss:StyleID="s65"><Data ss:Type="String">&lt;Font Size=&quot;15&quot; Color=&quot;#ccb270&quot;&gt;&lt;i&gt;狂暴的痛苦之海掀起一场风暴，让阿曼II号在浪尖上跳跃。它的船员们把自己密封在船舱里，只有一个倒霉的水手为了下帆被滞留在桅杆上，他那把可靠的手枪是他唯一的同伴。\n\n突然一道巨浪袭来，枪脱手飞了出去，在抛物线的顶点，它被闪电击中，保护了整艘船。随后它掉到甲板上，滑进了船体。回到港口后，这把通电的手枪被用钻石绝缘，它将永远传递海洋的力量。&lt;/i&gt;&lt;/Font&gt;</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s65"><Data ss:Type="String">ui_unique_spellblade_catalyst</Data></Cell>
@@ -1432,7 +1433,7 @@
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s65"><Data ss:Type="String">ui_ArmorTypeWarrior</Data></Cell>
     <Cell ss:StyleID="s68"><Data ss:Type="String">Bruiser</Data></Cell>
-    <Cell ss:StyleID="s65"><Data ss:Type="String">战士</Data></Cell>
+    <Cell ss:StyleID="s65"><Data ss:Type="String">斗士</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s65"><Data ss:Type="String">ui_ArmorTypeRogue</Data></Cell>
@@ -1442,7 +1443,7 @@
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s65"><Data ss:Type="String">ui_ArmorTypeMage</Data></Cell>
     <Cell ss:StyleID="s68"><Data ss:Type="String">Sorcerer</Data></Cell>
-    <Cell ss:StyleID="s65"><Data ss:Type="String">法师</Data></Cell>
+    <Cell ss:StyleID="s65"><Data ss:Type="String">巫师</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s65"><Data ss:Type="String">ui_ArmorTypeAccessory</Data></Cell>
@@ -6521,8 +6522,8 @@
    </Row>
    <Row ss:AutoFitHeight="0" ss:Height="63.75">
     <Cell ss:StyleID="s65"><Data ss:Type="String">ui_reagent3_lore</Data></Cell>
-    <Cell ss:StyleID="s78"><Data ss:Type="String">&lt;Font Size=&quot;15&quot; Color=&quot;#ccb270&quot;&gt;&lt;i&gt;What happens after the end of a mortal life? While most compensate for their ignorance by finding refuge in spirituality, others become obsessed with what lies beyond the Veil of Death.\n\nSome shamans and necromancers even managed to interact with the inacessible land of the dead known as &quot;Eriebe&quot;. Through ill-gotten knowledge, an even rarer few have learned to lure specters and souls through the Veil of Death, and harvest the residual energy those entities carry in from Eriebe./n/nThese cold energy orbs have unique properties, rumour telling they can be transformed into any kind of matter or energy in the proper hands.&lt;/i&gt;&lt;/Font&gt;</Data></Cell>
-    <Cell ss:StyleID="s65"><Data ss:Type="String">&lt;Font Size=&quot;15&quot; Color=&quot;#ccb270&quot;&gt;&lt;i&gt;凡人死后会发生什么？虽然大多数人通过寻求精神上的庇护来弥补他们的无知，但另有一些人却沉浸于生死帷幕之外的存在。\n\n一些萨满和亡灵巫师甚至设法与被称为“幽冥”的死亡之地互动。通过来路不正的知识，更加稀少的少数人学会了透过生死帷幕引诱幽灵和鬼魂，并收获这些魂体从“幽冥”带来的残留能量。\n\n这些冰冷的能量球有着独特的性质，传言说它们可以在合适的人手中转化成任何物质或能量。&lt;/i&gt;&lt;/Font&gt;</Data></Cell>
+    <Cell ss:StyleID="s78"><Data ss:Type="String">&lt;Font Size=&quot;15&quot; Color=&quot;#ccb270&quot;&gt;&lt;i&gt;What happens after the end of a mortal life? While most compensate for their ignorance by finding refuge in spirituality, others become obsessed with what lies beyond the Veil of Death.\n\nSome shamans and necromancers even managed to interact with the inacessible land of the dead known as &quot;Eriebe&quot;. Through ill-gotten knowledge, an even rarer few have learned to lure specters and souls through the Veil of Death, and harvest the residual energy those entities carry in from Eriebe.\n\nThese cold energy orbs have unique properties, rumour telling they can be transformed into any kind of matter or energy in the proper hands.&lt;/i&gt;&lt;/Font&gt;</Data></Cell>
+    <Cell ss:StyleID="s65"><Data ss:Type="String">&lt;Font Size=&quot;15&quot; Color=&quot;#ccb270&quot;&gt;&lt;i&gt;凡人死后会发生什么？虽然大多数人通过寻求精神上的庇护来弥补他们的无知，但另有一些人却沉浸于生死帷幕之外的存在。\n\n一些萨满和亡灵巫师甚至设法与被称为“幽冥”的死亡之地互动。通过来路不正的知识，屈指可数的几个人学会了透过生死帷幕引诱幽灵和鬼魂，并收割这些魂体从“幽冥”带来的残留能量。\n\n这些冰冷的能量球有着独特的性质，传言说它们可以在合适的人手中转化成任何物质或能量。&lt;/i&gt;&lt;/Font&gt;</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s65"><Data ss:Type="String">ui_reagent4_name</Data></Cell>
