--- a/datamine/lang/polish_xml.pak/text_ui_Loot.xml
+++ b/datamine/lang/polish_xml.pak/text_ui_Loot.xml
@@ -8,9 +8,9 @@
  <DocumentProperties xmlns="urn:schemas-microsoft-com:office:office">
   <Title>Untitled Spreadsheet</Title>
   <Author>Unknown Creator</Author>
-  <LastAuthor>Cthylla</LastAuthor>
-  <Created>2020-03-05T08:49:02Z</Created>
-  <LastSaved>2020-03-05T08:49:02Z</LastSaved>
+  <LastAuthor>Christopher</LastAuthor>
+  <Created>2020-03-17T16:47:27Z</Created>
+  <LastSaved>2020-03-17T16:47:27Z</LastSaved>
   <Company>Microsoft Corporation</Company>
   <Version>16.00</Version>
  </DocumentProperties>
@@ -18,10 +18,11 @@
   <AllowPNG/>
  </OfficeDocumentSettings>
  <ExcelWorkbook xmlns="urn:schemas-microsoft-com:office:excel">
-  <WindowHeight>17625</WindowHeight>
-  <WindowWidth>32767</WindowWidth>
+  <WindowHeight>7980</WindowHeight>
+  <WindowWidth>21570</WindowWidth>
   <WindowTopX>32767</WindowTopX>
   <WindowTopY>32767</WindowTopY>
+  <RefModeR1C1/>
   <ProtectStructure>False</ProtectStructure>
   <ProtectWindows>False</ProtectWindows>
  </ExcelWorkbook>
@@ -6521,8 +6522,8 @@
    </Row>
    <Row ss:AutoFitHeight="0" ss:Height="63.75">
     <Cell ss:StyleID="s65"><Data ss:Type="String">ui_reagent3_lore</Data></Cell>
-    <Cell ss:StyleID="s78"><Data ss:Type="String">&lt;Font Size=&quot;15&quot; Color=&quot;#ccb270&quot;&gt;&lt;i&gt;What happens after the end of a mortal life? While most compensate for their ignorance by finding refuge in spirituality, others become obsessed with what lies beyond the Veil of Death.\n\nSome shamans and necromancers even managed to interact with the inacessible land of the dead known as &quot;Eriebe&quot;. Through ill-gotten knowledge, an even rarer few have learned to lure specters and souls through the Veil of Death, and harvest the residual energy those entities carry in from Eriebe./n/nThese cold energy orbs have unique properties, rumour telling they can be transformed into any kind of matter or energy in the proper hands.&lt;/i&gt;&lt;/Font&gt;</Data></Cell>
-    <Cell ss:StyleID="s65"><Data ss:Type="String">&lt;Font Size=&quot;15&quot; Color=&quot;#ccb270&quot;&gt;&lt;i&gt;Co dzieje się po zakończeniu żywota jako śmiertelnik? Podczas, gdy większość rekompensuje swoją ignorancję, znajdując schronienie w duchowości, inni mają obsesję na punkcie tego, co kryje się za Zasłoną Śmierci.\n\nNiektórzy szamani i nekromanci zdołali nawet wejść w interakcję z niedostępną krainą umarłych zwaną „Eriebe”. Dzięki tak zdobytej wiedzy, jeszcze bardziej wytrwali nauczyli się wabić widma i dusze poprzez Zasłonę Śmierci i zbierać resztki przylegającej do nich energii, którą te istoty przenoszą z Eriebe./n/nTak stworzone kule zimnej energii mają unikalne właściwości, a według plotek, ktoś odpowiednio zdolny mógłby przekształcać je w jakąkolwiek materię lub energię.&lt;/i&gt;&lt;/Font&gt;</Data></Cell>
+    <Cell ss:StyleID="s78"><Data ss:Type="String">&lt;Font Size=&quot;15&quot; Color=&quot;#ccb270&quot;&gt;&lt;i&gt;What happens after the end of a mortal life? While most compensate for their ignorance by finding refuge in spirituality, others become obsessed with what lies beyond the Veil of Death.\n\nSome shamans and necromancers even managed to interact with the inacessible land of the dead known as &quot;Eriebe&quot;. Through ill-gotten knowledge, an even rarer few have learned to lure specters and souls through the Veil of Death, and harvest the residual energy those entities carry in from Eriebe.\n\nThese cold energy orbs have unique properties, rumour telling they can be transformed into any kind of matter or energy in the proper hands.&lt;/i&gt;&lt;/Font&gt;</Data></Cell>
+    <Cell ss:StyleID="s65"><Data ss:Type="String">&lt;Font Size=&quot;15&quot; Color=&quot;#ccb270&quot;&gt;&lt;i&gt;Co dzieje się po zakończeniu żywota jako śmiertelnik? Podczas, gdy większość rekompensuje swoją ignorancję, znajdując schronienie w duchowości, inni mają obsesję na punkcie tego, co kryje się za Zasłoną Śmierci.\n\nNiektórzy szamani i nekromanci zdołali nawet wejść w interakcję z niedostępną krainą umarłych zwaną „Eriebe”. Dzięki tak zdobytej wiedzy, jeszcze bardziej wytrwali nauczyli się wabić widma i dusze poprzez Zasłonę Śmierci i zbierać resztki przylegającej do nich energii, którą te istoty przenoszą z Eriebe.\n\nTak stworzone kule zimnej energii mają unikalne właściwości, a według plotek, ktoś odpowiednio zdolny mógłby przekształcać je w jakąkolwiek materię lub energię.&lt;/i&gt;&lt;/Font&gt;</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s65"><Data ss:Type="String">ui_reagent4_name</Data></Cell>
