--- a/datamine/lang/spanish_xml.pak/text_ui_Loot.xml
+++ b/datamine/lang/spanish_xml.pak/text_ui_Loot.xml
@@ -8,9 +8,9 @@
  <DocumentProperties xmlns="urn:schemas-microsoft-com:office:office">
   <Title>Untitled Spreadsheet</Title>
   <Author>Unknown Creator</Author>
-  <LastAuthor>Cthylla</LastAuthor>
-  <Created>2020-03-05T08:40:59Z</Created>
-  <LastSaved>2020-03-05T08:40:59Z</LastSaved>
+  <LastAuthor>Christopher</LastAuthor>
+  <Created>2020-03-17T16:45:14Z</Created>
+  <LastSaved>2020-03-17T16:45:14Z</LastSaved>
   <Company>Microsoft Corporation</Company>
   <Version>16.00</Version>
  </DocumentProperties>
@@ -18,10 +18,10 @@
   <AllowPNG/>
  </OfficeDocumentSettings>
  <ExcelWorkbook xmlns="urn:schemas-microsoft-com:office:excel">
-  <WindowHeight>2835</WindowHeight>
-  <WindowWidth>11715</WindowWidth>
-  <WindowTopX>32767</WindowTopX>
-  <WindowTopY>32767</WindowTopY>
+  <WindowHeight>11475</WindowHeight>
+  <WindowWidth>22050</WindowWidth>
+  <WindowTopX>0</WindowTopX>
+  <WindowTopY>0</WindowTopY>
   <ProtectStructure>False</ProtectStructure>
   <ProtectWindows>False</ProtectWindows>
  </ExcelWorkbook>
@@ -6521,8 +6521,8 @@
    </Row>
    <Row ss:AutoFitHeight="0" ss:Height="63.75">
     <Cell ss:StyleID="s19"><Data ss:Type="String">ui_reagent3_lore</Data></Cell>
-    <Cell ss:StyleID="s32"><Data ss:Type="String">&lt;Font Size=&quot;15&quot; Color=&quot;#ccb270&quot;&gt;&lt;i&gt;What happens after the end of a mortal life? While most compensate for their ignorance by finding refuge in spirituality, others become obsessed with what lies beyond the Veil of Death.\n\nSome shamans and necromancers even managed to interact with the inacessible land of the dead known as &quot;Eriebe&quot;. Through ill-gotten knowledge, an even rarer few have learned to lure specters and souls through the Veil of Death, and harvest the residual energy those entities carry in from Eriebe./n/nThese cold energy orbs have unique properties, rumour telling they can be transformed into any kind of matter or energy in the proper hands.&lt;/i&gt;&lt;/Font&gt;</Data></Cell>
-    <Cell ss:StyleID="s19"><Data ss:Type="String">&lt;Font Size=&quot;15&quot; Color=&quot;#ccb270&quot;&gt;&lt;i&gt;¿Qué pasa después del final de una vida mortal? Mientras que la mayoría compensa su ignorancia encontrando refugio en la espiritualidad, otros se obsesionan con lo que hay más allá del Velo de la Muerte.\n\nAlgunos chamanes y nigromantes incluso se las arreglaron para interactuar con la inaccesible tierra de los muertos conocida como &quot;Eriebe&quot;.\n\nEstos orbes de energía helada tienen propiedades únicas, se rumorea que pueden ser transformados en cualquier tipo de materia o energía en las manos adecuadas.&lt;/i&gt;&lt;/Font&gt;</Data></Cell>
+    <Cell ss:StyleID="s32"><Data ss:Type="String">&lt;Font Size=&quot;15&quot; Color=&quot;#ccb270&quot;&gt;&lt;i&gt;What happens after the end of a mortal life? While most compensate for their ignorance by finding refuge in spirituality, others become obsessed with what lies beyond the Veil of Death.\n\nSome shamans and necromancers even managed to interact with the inacessible land of the dead known as &quot;Eriebe&quot;. Through ill-gotten knowledge, an even rarer few have learned to lure specters and souls through the Veil of Death, and harvest the residual energy those entities carry in from Eriebe.\n\nThese cold energy orbs have unique properties, rumour telling they can be transformed into any kind of matter or energy in the proper hands.&lt;/i&gt;&lt;/Font&gt;</Data></Cell>
+    <Cell ss:StyleID="s19"><Data ss:Type="String">&lt;Font Size=&quot;15&quot; Color=&quot;#ccb270&quot;&gt;&lt;i&gt;¿Qué pasa después del final de una vida mortal? Mientras que la mayoría compensa su ignorancia encontrando refugio en la espiritualidad, otros se obsesionan con lo que hay más allá del Velo de la Muerte.\n\nAlgunos chamanes y nigromantes incluso se las arreglaron para interactuar con la inaccesible tierra de los muertos conocida como &quot;Eriebe&quot;. A través de conocimientos mal adquiridos, unos pocos han aprendido a atraer espectros y almas a través del Velo de la Muerte, y cosechar la energía residual que esas entidades traen de Eriebe.\n\nEstos orbes de energía helada tienen propiedades únicas, se rumorea que pueden ser transformados en cualquier tipo de materia o energía en las manos adecuadas.&lt;/i&gt;&lt;/Font&gt;</Data></Cell>
    </Row>
    <Row>
     <Cell ss:StyleID="s19"><Data ss:Type="String">ui_reagent4_name</Data></Cell>
