--- a/datamine/lang/portuguese_xml.pak/text_ui_Loot.xml
+++ b/datamine/lang/portuguese_xml.pak/text_ui_Loot.xml
@@ -8,9 +8,9 @@
  <DocumentProperties xmlns="urn:schemas-microsoft-com:office:office">
   <Title>Untitled Spreadsheet</Title>
   <Author>Unknown Creator</Author>
-  <LastAuthor>Cthylla</LastAuthor>
-  <Created>2020-03-05T08:54:57Z</Created>
-  <LastSaved>2020-03-05T08:54:57Z</LastSaved>
+  <LastAuthor>Christopher</LastAuthor>
+  <Created>2020-03-17T16:49:36Z</Created>
+  <LastSaved>2020-03-17T16:49:36Z</LastSaved>
   <Company>Microsoft Corporation</Company>
   <Version>16.00</Version>
  </DocumentProperties>
@@ -18,10 +18,11 @@
   <AllowPNG/>
  </OfficeDocumentSettings>
  <ExcelWorkbook xmlns="urn:schemas-microsoft-com:office:excel">
-  <WindowHeight>17625</WindowHeight>
-  <WindowWidth>32767</WindowWidth>
+  <WindowHeight>7980</WindowHeight>
+  <WindowWidth>21570</WindowWidth>
   <WindowTopX>32767</WindowTopX>
   <WindowTopY>32767</WindowTopY>
+  <RefModeR1C1/>
   <ProtectStructure>False</ProtectStructure>
   <ProtectWindows>False</ProtectWindows>
  </ExcelWorkbook>
@@ -4537,7 +4538,7 @@
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s65"><Data ss:Type="String">ui_ic_supportsocket_3</Data></Cell>
     <Cell ss:StyleID="s68"><Data ss:Type="String">&lt;Font Color=&quot;#A2E4FF&quot;&gt;Support (III)&lt;/Font&gt;</Data></Cell>
-    <Cell ss:StyleID="s65"><Data ss:Type="String">&lt;Font Color=&quot;#A2E4FF&quot;&gt;&gt;Suporte (III)&lt;/Font&gt;</Data></Cell>
+    <Cell ss:StyleID="s65"><Data ss:Type="String">&lt;Font Color=&quot;#A2E4FF&quot;&gt;Suporte (III)&lt;/Font&gt;</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s65"><Data ss:Type="String">ui_ic_gem</Data></Cell>
@@ -6521,8 +6522,8 @@
    </Row>
    <Row ss:AutoFitHeight="0" ss:Height="63.75">
     <Cell ss:StyleID="s65"><Data ss:Type="String">ui_reagent3_lore</Data></Cell>
-    <Cell ss:StyleID="s78"><Data ss:Type="String">&lt;Font Size=&quot;15&quot; Color=&quot;#ccb270&quot;&gt;&lt;i&gt;What happens after the end of a mortal life? While most compensate for their ignorance by finding refuge in spirituality, others become obsessed with what lies beyond the Veil of Death.\n\nSome shamans and necromancers even managed to interact with the inacessible land of the dead known as &quot;Eriebe&quot;. Through ill-gotten knowledge, an even rarer few have learned to lure specters and souls through the Veil of Death, and harvest the residual energy those entities carry in from Eriebe./n/nThese cold energy orbs have unique properties, rumour telling they can be transformed into any kind of matter or energy in the proper hands.&lt;/i&gt;&lt;/Font&gt;</Data></Cell>
-    <Cell ss:StyleID="s65"><Data ss:Type="String">&lt;Font Size=&quot;15&quot; Color=&quot;#ccb270&quot;&gt;&lt;i&gt;O que acontece após o fim de uma vida mortal? Enquanto muitos compensam sua ignorância encontrando refúgio na espiritualidade, outros ficam obcecados com o que está além do Véu da Morte.\n\nAlguns xamãs e necromantes até conseguiram interagir com a terra inacessível dos mortos conhecida como &quot;Eriebe&quot;. Através de um conhecimento adquirido de forma errada, poucos deles aprenderam a atrair espectros e almas através do Véu da Morte e colher a energia residual que essas entidades carregam de Eriebe.\n\nEstes orbes de energia fria têm propriedades únicas, rumores dando conta de que podem ser transformados em qualquer tipo de matéria ou energia nas mãos adequadas.&lt;/i&gt;&lt;/Font&gt;</Data></Cell>
+    <Cell ss:StyleID="s78"><Data ss:Type="String">&lt;Font Size=&quot;15&quot; Color=&quot;#ccb270&quot;&gt;&lt;i&gt;What happens after the end of a mortal life? While most compensate for their ignorance by finding refuge in spirituality, others become obsessed with what lies beyond the Veil of Death.\n\nSome shamans and necromancers even managed to interact with the inacessible land of the dead known as &quot;Eriebe&quot;. Through ill-gotten knowledge, an even rarer few have learned to lure specters and souls through the Veil of Death, and harvest the residual energy those entities carry in from Eriebe.\n\nThese cold energy orbs have unique properties, rumour telling they can be transformed into any kind of matter or energy in the proper hands.&lt;/i&gt;&lt;/Font&gt;</Data></Cell>
+    <Cell ss:StyleID="s65"><Data ss:Type="String">&lt;Font Size=&quot;15&quot; Color=&quot;#ccb270&quot;&gt;&lt;i&gt;O que acontece após o fim de uma vida mortal? Enquanto muitos compensam sua ignorância encontrando refúgio na espiritualidade, outros ficam obcecados com o que está além do Véu da Morte.\n\nAlguns xamãs e necromantes até conseguiram interagir com a terra inacessível dos mortos conhecida como &quot;Eriebe&quot;. Através de um conhecimento adquirido de forma errada, poucos deles aprenderam a atrair espectros e almas através do Véu da Morte e colher a energia residual que essas entidades carregam do Eriebe.\n\nEstes orbes de energia fria têm propriedades únicas, rumores dando conta de que podem ser transformados em qualquer tipo de matéria ou energia nas mãos adequadas.&lt;/i&gt;&lt;/Font&gt;</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s65"><Data ss:Type="String">ui_reagent4_name</Data></Cell>
